runtime/src/test/resources/tests/error/util.wstl
def fail() {
  var array: [1, 2, 3]
  array.oops
}